[package]
name = "lenote-server"
version = "0.1.0"
authors = ["Steven Luu <me@luu.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.*"
actix-rt = "1.0.*"
actix-service = "1.0.*"
actix-web = "2.0.*"
base64 = "0.11"
bytes = "0.5"
clap = "2.33.*"
env_logger = "0.7"
failure = "0.1"
lazy_static = "1.4"
lenote-common = { path = "../lenote-common" }
log = "0.4"
rand = "0.7"
regex = "1"
rusqlite = { version = "0.21.*", features = ["bundled", "array"] }
serde = { version = "1.0.*", features = ["derive"] }
tokio = { version = "0.2", features = ["fs"] }