[package]
name = "lenote-ui"
version = "0.1.0"
authors = ["Steven Luu <me@luu.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
lenote-common = { path = "../lenote-common" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "^0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "Node"] }
js-sys = "0.3"
yew = { version = "0.13", features = ["web_sys"] }
yew-router = { version = "0.10", features = ["web_sys"] }